--- a/styles/style_index.css
+++ b/styles/style_index.css
@@ -4,7 +4,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 0;
+    padding: 20px;
     background-color: #a7c2eb;
 }
 
@@ -60,10 +60,6 @@ h2 {
     border-radius: 10px;
     padding: 10px;
 }
-
-/* div.resultadoNombre {
-    display: flex;
-} */
 
 #resultadoBalance {
     width: 100%;
