--- a/styles/style_index.css
+++ b/styles/style_index.css
@@ -134,3 +134,43 @@ div.grafica {
 button {
     margin-bottom: 10px;
 }
+
+.email{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+form{
+    background: gainsboro;
+    display: flex;
+    flex-direction: column;
+    padding: 2vw 4vw;
+    width: 90%;
+    max-width: 600px;
+    border-radius: 10px;
+}
+
+form input, form textarea{
+    border: 0;
+    margin: 10px 0;
+    padding: 20px;
+    outline: none;
+    background: #f5f5f5;
+    font-size: 16px;
+}
+
+#btn{
+    padding: 15px;
+    background: rgb(55, 152, 177);
+    color: beige;
+    font-size: 18px;
+    border: 0;
+    outline: 0;
+    cursor: pointer;
+    width: 150px;
+    margin: 20px auto 0;
+    border-radius: 30px;
+}
